# libconfig

lib/: CMakeLists.txt
tests/: CMakeLists.txt
